[package]
name = "iot-pal"
description = "IoT Protocol Abstraction Layer (PAL)"
repository = "https://github.com/ryankurte/iot-pal"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "MPL-2.0"


[features]
client_coap = [ "coap", "tokio" ]
client_mqtt = [ "paho-mqtt" ]

store_elastic = [ "elastic", "reqwest", "base64", "serde", "serde_json" ]

default = [ "client_mqtt", "client_coap", "store_elastic" ]


[dependencies]
async-trait = "0.1.40"
anyhow = "1.0.32"
log = "0.4.11"
futures = { version = "0.3.5", features = [ "compat" ] }


structopt = { version = "0.3.17", optional = true }
serde = { version = "1.0.115", features = [ "derive" ], optional = true }

tokio = { version = "0.2.22", optional = true }
elastic = { version = "0.21.0-pre.5", features = [ "rustls-tls" ], optional = true }
serde_json = { version = "1.0.57", optional = true }
reqwest = { version = "0.9.24", features = [ "rustls-tls" ], optional = true }
base64 = { version = "0.12.3", optional = true }

[dependencies.coap]
version = "0.8.0"
git = "https://github.com/ryankurte/coap-rs"
branch = "feature/async-client"
optional = true

[dependencies.paho-mqtt]
version = "0.8.0"
git = "https://github.com/ryankurte/paho.mqtt.rust"
branch = "develop-fix-persistence"
optional = true

#TODO: more functional client maybe?
#elasticsearch = { version = "*", optional = true }


[patch.crates-io]
#paho-mqtt = { git = "https://github.com/ryankurte/paho.mqtt.rust", branch = "develop-fix-persistence" }
#coap = { path = "../forks/coap-rs" }
